--- a/algoritm.css
+++ b/algoritm.css
@@ -1,19 +1,22 @@
 #table1{
-    border: solid lightblue 1px ;
-    border-radius: 10px;
+    border: solid lightblue 1.5px ;
+    border-radius: 5px;
     margin-top: 20px;
+    width: 100%;
+    height: auto;
 }
 
 #table2{
-    border: solid orange 1px ;
-    border-radius: 10px;
+    border: solid orange 1.5px ;
+    border-radius: 5px;
     margin-top: 20px;
+    width: 100%;
+    height: auto;
 }
 
 th, td{
     text-align: left;
     padding: 10px;
-    
 }
 
 #elso {
@@ -23,9 +26,18 @@ th, td{
 }
 
 #th1{
-    background-color: rgba(173, 216, 230, 0.5);
+    background-color: rgba(173, 216, 230, 0.3);
+
 }
 
 #th2{
-    
+    background-color: rgba(245, 194, 100, 0.2);
+}
+
+li{
+    padding: 5px;
+}
+
+#elsosor{
+    margin-top: 15px;
 }
